2015-06-11  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * various: Lots of new comments, reformatting, and warning fixes.
   * various: Use get_cursor_origin() to get the cursor location.
   * slice_window/outline.c: Fix outline drawing to use the plane
	normal in world rather than voxel coordinates.
   * main/{event_loop.c, graphics.c, display.c}: Some simplification.
   * segmenting/painting.c: Fix a few issues with painting, especially when
	the brush is dragged outside the window bounds.
   * menu/*, markers/*: Streamline the menu and object window drawing code.
   * menu/*: Use '1' and '2' for "previous time point" and "next time point"
	commands.
2015-06-02  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * slice_window/{slice.c, view.c, draw_slice.c}: Added field-of-view
	display for each orthogonal slice view.
   * Include/global_variables.h: Added boolean "Show_slice_field_of_view".

2015-05-07  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * menu/<multiple>: Add simple help text for commands.
   * menu/<multiple>: Removed menu commands for Magnify 3D,
	Translate 3D, and Rotate 3D, as these functions are now
	available directly using the mouse.

2015-05-05  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * <multiple>: Added support for scrolling events, scrolling now
	changes the zoom level in 3D and slice windows.
   * events/magnify.c: Allow translation of the 3D view using the right
	mouse button.

2015-04-27  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * main/main.c: Added version reporting for glut and OpenGL.

2015-04-26  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * input_files.c: Recognize .mgz, .mgh, and .nii as volume extensions.

2015-04-23  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * callbacks/volume_ops.c: Add some comments, minor formatting changes.
   * slice_window/slice_events.c: Rudimentary cursor visual cues.
   * main/main.c: Use the Graphics_double_buffer_flag for the marker and menu
	windows.